Fix overflow settings

--- a/app/assets/stylesheets/admin/components/_index_table.scss
+++ b/app/assets/stylesheets/admin/components/_index_table.scss
@@ -9,7 +9,7 @@
   &-wrap {
     overflow-x: scroll;
     @include min-width($bpFull) {
-      overflow-x: auto;
+      overflow-x: visible;
     }
   }
 
